--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Nmedia</string>
+    <string name="hello_world" translatable="false">Hello world!</string>
 </resources>
