сделал РФ локаль для названия приложения и приветственного сообщения

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Nmedia</string>
-    <string name="hello_world" translatable="false">Hello world!</string>
+    <string name="app_name" translatable="false">Nmedia</string>
+    <string name="hello_world" translatable="false">Nmedia!</string>
 </resources>
