--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Nmedia</string>
-    <string name="hello_world">Привет мир!</string>
+    <string name="app_name">Нмедиа</string>
+    <string name="hello_world">Нмедиа!</string>
 </resources>
