--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,5 @@
 <resources>
     <string name="app_name">Нмедиа</string>
     <string name="hello_world">Нмедиа!</string>
+    <string name="description_post_author">Аватар пользователя</string>
 </resources>
