--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name" translatable="false">Nmedia</string>
     <string name="hello_world" translatable="false">Nmedia!</string>
+    <string name="description_post_author">User\'s avatar</string>
+    <string name="liked_count">10</string>
+    <string name="share_count">5</string>
+    <string name="view_count">200</string>
 </resources>
