в процессе прописывания кнопки menu для удаления

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,4 +6,5 @@
     <string name="liked_count">0</string>
     <string name="share_count">0</string>
     <string name="view_count">0</string>
+    <string name="menu_remove">Удалить</string>
 </resources>
