--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,4 +7,6 @@
     <string name="share_count">0</string>
     <string name="view_count">0</string>
     <string name="menu_remove">Удалить</string>
+    <string name="menu_edit">Изменить</string>
+    <string name="error_empty_content">Пустое содержимое!</string>
 </resources>
