добавил разметку для элементов группы редактирования

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -9,4 +9,5 @@
     <string name="menu_remove">Удалить</string>
     <string name="menu_edit">Изменить</string>
     <string name="error_empty_content">Пустое содержимое!</string>
+    <string name="edit_constant">Изменить пост</string>
 </resources>
