--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="menu_remove">Remove</string>
     <string name="menu_edit">Edit</string>
     <string name="error_empty_content">Empty Content!</string>
+    <string name="edit_constant">Edit Post</string>
 </resources>
