добился получения уведомлений от сендера и оттображения в трее

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,4 +11,7 @@
     <string name="error_empty_content">Пустое содержимое!</string>
     <string name="edit_constant">Изменить пост</string>
     <string name="chooser_chare_post">Текст для отправки</string>
+    <string name="notification_user_liked">Пользователю %1$s понравился пост пользователя %2$s</string>
+    <string name="channel_remote_name">Уведомление сервера</string>
+    <string name="channel_remote_description">Уведомление с удалённого сервера</string>
 </resources>
